The following bugs have been fixed in the 1.4.5 release.

7021190	MimeMessage.setRecipients(type, String) does not accept null address
K  4002	MultipartReport.setReport and setDeliveryStatus are broken
K  4065	Wrong representation of CR/LF are appended to the attachment
<no id>	properly handle timeouts during SSL negotiation
<no id>	free MIME headers in IMAPMessage.invalidateHeaders


		  CHANGES IN THE 1.4.4 RELEASE
		  ----------------------------
The following bugs have been fixed in the 1.4.4 release.

5057742	javax.mail.internet.MimeMessage.addFrom() violates RFC2822
6778568	lower memory usage of POP3 parsing by buffering to disk
6905730	MimeMessage.parse() is very slow on malformed message content
6910675	IMAP provider can lose track of message sequence numbers
6928566	Header violates RFC 2822 for multiple calls of addRecipient(s)
6995537	work around this JDK bug that causes iso-2022-jp decoding problems
G 11069	update the mail.jar manifest to include DynamicImport-Package
K  3442	make sure socket is closed if SMTP connect fails
K  3539	Multiparts do not parse correctly in presence of legacy Mac line endings
K  3566	InputStreams are not closed in MimeMultipart
<no id>	add mail.mime.windowsfilenames System property to handle IE6 breakage
<no id>	properly disable TOP if POP3 CAPA response doesn't include it
<no id>	add mail.pop3.disablecapa property to disable use of the CAPA command
<no id>	fix support for Properties objects with default Properties objects
<no id>	integrate NTLM support, no longer needs jcifs.jar
<no id>	add mail.pop3.cachewriteto property, default false
<no id>	add mail.pop3.filecache.enable property for caching messages in tmp file
<no id>	add mail.mime.ignorewhitespacelines property, default false
<no id>	add support for IMAP UNSELECT command
<no id>	add mail.mime.contentypehandler System property, to clean Content-Type
<no id>	add mail.mime.allowencodedmessages System property
<no id>	add support for SASL authentication to SMTP provider